--- a/style.css
+++ b/style.css
@@ -94,15 +94,56 @@ body {
     transition-delay: 0.1s;
 }
 
-.custom-field.one input + .placeholder {
+.custom-field.one input+.placeholder {
     padding: 0 5px;
     left: 8px;
 }
 
-.custom-field.one input:valid + .placeholder,
-.custom-field.one input:focus + .placeholder {
+.custom-field.one input:valid+.placeholder,
+.custom-field.one input:focus+.placeholder {
     top: 4px;
-    background:  rgba(22, 22, 22, 0.4);
+    background: rgba(22, 22, 22, 0.4);
+}
+
+.entratbtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #e50914;
+    color: #fff;
+    border: none;
+    outline: none;
+    overflow: hidden;
+    height: 50px;
+    width: 290px;
+    border-radius: 10px;
+    font-size: 18px;
+    font-weight: 700;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+}
+
+.entratbtn::after {
+    content: "";
+    z-index: -1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    
+}
+
+.entratbtn::before {
+    content: "";
+    background: linear-gradient(45deg, #FF0000, transparent, #FF0000, transparent, #FF0000, transparent, #FF0000, transparent);
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 600%;
+    z-index: -1;
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    filter: blur(8px);
 }
 
 .logo {
