--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ body {
     justify-content: space-between;
     gap: 25px;
     background-color: rgba(0, 0, 0, 0.7);
-    width: 450px;
-    height: 706px;
+    width: 420px;
+    height: 693px;
     position: relative;
     border-radius: 5px;
 }
@@ -25,17 +25,18 @@ body {
     justify-content: center;
     align-items: center;
     height: 100%;
+    border-radius: 8px;
 
 }
 
 .entrar {
     opacity: 1;
-    font-size: 35px;
+    font-size: 30px;
     color: #fff;
     display: flex;
     align-self: flex-start;
     margin-top: 50px;
-    margin-left: 75px;
+    margin-left: 65px;
 }
 
 .custom-field {
@@ -84,13 +85,13 @@ body {
 
 .custom-field.one input {
     background: none;
-    border: 2px solid #ddd;
+    border: 2px solid #8b8b8b;
     transition: border-color 0.3s ease;
 }
 
 .custom-field.one input:valid,
 .custom-field.one input:focus {
-    border-color: #222;
+    border-color: #141414;
     transition-delay: 0.1s;
 }
 
@@ -114,45 +115,53 @@ body {
     border: none;
     outline: none;
     overflow: hidden;
-    height: 50px;
+    height: 40px;
     width: 290px;
-    border-radius: 10px;
-    font-size: 18px;
+    border-radius: 4px;
+    font-size: 14px;
     font-weight: 700;
     cursor: pointer;
     position: relative;
-    z-index: 0;
-}
-
-.entratbtn::after {
-    content: "";
-    z-index: -1;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    
-}
-
-.entratbtn::before {
-    content: "";
-    background: linear-gradient(45deg, #FF0000, transparent, #FF0000, transparent, #FF0000, transparent, #FF0000, transparent);
-    position: absolute;
-    top: -2px;
-    left: -2px;
-    background-size: 600%;
-    z-index: -1;
-    width: calc(100% + 4px);
-    height: calc(100% + 4px);
-    filter: blur(8px);
+    transition: transform 0.3s ease;
 }
 
 .logo {
     display: flex;
-    margin-right: 1040px;
+    margin-right: 970px;
     margin-top: 2px;
 }
 
 .logo img {
-    width: 149px;
+    width: 145px;
     height: auto;
+}
+
+.ou-class {
+    font-weight: 300;
+    font-size: 14px;
+    color: #aaa;
+    transform: translateY(-10px);
+}
+
+.codigo-acesso {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(128,128,128,0.4);
+    color: #fff;
+    border: none;
+    outline: none;
+    overflow: hidden;
+    height: 40px;
+    width: 290px;
+    border-radius: 4px;
+    font-size: 14px;
+    font-weight: 700;
+    cursor: pointer;
+    position: relative;
+    transition: 0.3s ease;
+}
+
+.entratbtn:hover, .codigo-acesso:hover {
+    transform: scale(1.1);
 }
