--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,8 @@
 body {
     background-image: url('../img/Netflixbackground.jpg');
-    background-size: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     font-family: 'Kumbh Sans';
     color: #fff;
 }
@@ -234,8 +236,8 @@ body {
 }
 
 .novo-transform a {
-font-weight: 600;
-text-decoration: none;
+    font-weight: 600;
+    text-decoration: none;
 }
 
 .novo {
@@ -258,10 +260,10 @@ text-decoration: none;
     transform: translateX(10px);
 }
 
-.captcha-transform p{
-font-size: 12px;
-color: #8b8b8b;
-width: 320px;
+.captcha-transform p {
+    font-size: 12px;
+    color: #8b8b8b;
+    width: 320px;
 }
 
 .captcha-transform a {
